--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="timeline-text">
                         <div class="timeline-date">2023 - 2024</div>
                         <h2>Fullstack Web Development</h2>
-                        <h4>Evangadi Tech Acadamy</h4>
+                        <h4>Evangadi Acadamy</h4>
                     </div>
                 </div>
                 <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
@@ -325,21 +325,25 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/Netflix-Logo.png" alt="Image">
+                            <a href="https://shegawa.github.io/Netflix-Clone-2024/"> <img src="img/Netflix-Logo.png"
+                                    alt="Image"> </a>
+
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/amazon.png" alt="Image">
+                            <a href="https://master--nimble-sawine-c54b40.netlify.app/"> <img src="img/amazon.png"
+                                    alt="Image"> </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-3 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/evangadi.png" alt="Image">
+                            <a href="https://chic-bubblegum-b87bfc.netlify.app/"> <img src="img/evangadi.png"
+                                    alt="Image"> </a>
                         </div>
                     </div>
                 </div>
